[gd_scene load_steps=6 format=2]

[ext_resource path="res://Score_Bar.gd" type="Script" id=1]
[ext_resource path="res://edge.png" type="Texture" id=2]
[ext_resource path="res://left_b.png" type="Texture" id=3]
[ext_resource path="res://middle_s.png" type="Texture" id=4]
[ext_resource path="res://right_b.png" type="Texture" id=5]

[node name="Score_Bar" type="Node2D"]
script = ExtResource( 1 )

[node name="brown_s" type="VSlider" parent="."]
margin_left = 23.0
margin_top = 11.0
margin_right = 87.0
margin_bottom = 403.0
rect_pivot_offset = Vector2( -174, -35 )

[node name="green_s" type="VSlider" parent="."]
margin_left = 860.0
margin_top = 13.0
margin_right = 924.0
margin_bottom = 405.0
rect_pivot_offset = Vector2( -174, -35 )

[node name="brown_text" type="RichTextLabel" parent="."]
margin_left = 129.0
margin_top = 265.0
margin_right = 169.0
margin_bottom = 305.0

[node name="green_text" type="RichTextLabel" parent="."]
margin_left = 722.0
margin_top = 272.0
margin_right = 762.0
margin_bottom = 312.0

[node name="Edge" type="Sprite" parent="."]
position = Vector2( 182, 101 )
z_index = 1
texture = ExtResource( 2 )

[node name="brown" type="Sprite" parent="."]
position = Vector2( 356.5, 101 )
scale = Vector2( 34.3, 1 )
texture = ExtResource( 3 )

[node name="seperator" type="Sprite" parent="."]
position = Vector2( 519.5, 101 )
z_index = 2
texture = ExtResource( 4 )

[node name="green" type="Sprite" parent="."]
position = Vector2( 529, 101 )
texture = ExtResource( 5 )

[node name="Edge2" type="Sprite" parent="."]
position = Vector2( 537, 101 )
scale = Vector2( -1, 1 )
z_index = 1
texture = ExtResource( 2 )

[connection signal="value_changed" from="brown_s" to="." method="_on_brown_s_value_changed"]
[connection signal="value_changed" from="green_s" to="." method="_on_green_s_value_changed"]
